--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -29,11 +32,67 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures{
+        viewBinding true
+    }
 }
 
 dependencies {
+//    val paging_version = "3.1.1"
+//    def room_version = "2.4.2"
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+
+//
+//    implementation "androidx.room:room-paging:2.5.0-alpha02"
+    implementation("androidx.paging:paging-common-ktx:3.1.1")
+    implementation("androidx.paging:paging-runtime:3.1.1")
+
+//    //Room
+//    implementation "androidx.room:room-runtime:2.4.2"
+//    implementation "androidx.room:room-ktx:2.4.2"
+//    kapt "androidx.room:room-compiler:2.4.2"
+//ROOM
+    implementation "androidx.room:room-runtime:2.4.2"
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.0'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.0'
+    kapt "androidx.room:room-compiler:2.4.2"
+    implementation "androidx.room:room-ktx:2.4.2"
+    implementation "androidx.room:room-paging:2.4.2"
+
+//// Paging 3.0
+//    implementation 'androidx.paging:paging-compose:1.0.0-alpha15'
+
+    // Activity
+    implementation "androidx.activity:activity-ktx:1.5.0"
+    //Corrutinas
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
+    // Retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    // ViewModelScope
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.0"
+    //dagger hilt
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+
+    //lottie
+    implementation 'com.airbnb.android:lottie:5.2.0'
+    //shimmer
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    kapt 'com.github.bumptech.glide:compiler:4.13.0'
+
+
+    implementation("io.coil-kt:coil:2.1.0")
+
+    implementation "com.github.jakob-grabner:Circle-Progress-View:1.4"
+
+
+//    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2'
+    implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
