--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.example.superheroapi">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".SuperHeroApp"
         android:allowBackup="true"
@@ -16,13 +17,20 @@
         android:theme="@style/Theme.SuperHeroApi"
         tools:targetApi="31">
         <activity
-            android:name=".ui.view.MainActivity"
-            android:exported="true">
+            android:name=".ui.view.SplashActivity"
+            android:exported="true"
+            android:theme="@style/splashTheme"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.view.MainActivity"
+            android:exported="true">
+
         </activity>
     </application>
 
